# ekspertika-ai-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compliance.config.json  main.py  pyproject.toml  railway.toml
app/agents/: base_agent.py  documents_agent.py  energy_agent.py  fire_safety_agent.py  orchestrator.py  routing.py  sanitary_agent.py  structural_agent.py
app/api/: main.py
app/flows/: compliance_flow.py  supabase_flow.py
app/handlers/: check_handler.py
app/integrations/: supabase_client.py
app/models/: check_item.py  check_result.py  str_registry.py  str_registry_entry.py
app/services/: chunker.py  compliance_checker.py  config_loader.py  embedder.py  excel_reporter.py  pdf_extractor.py  rate_limiter.py  retriever.py  str_checker.py  str_chunker.py  str_registry_loader.py  vector_store.py
app/types/: compliance.py
config/: config.py
data_pipeline/: str_registry.json
scripts/: download_str.py  ingest_str.py  smoke_test.py  smoke_test_prod_multifile.py
tests/agents/: test_base_agent.py  test_documents_agent.py  test_energy_agent.py  test_orchestrator.py  test_specialized_agents.py
tests/flows/: conftest.py  test_compliance_flow.py  test_supabase_flow.py
tests/services/: test_compliance_checker.py  test_embedder.py  test_rate_limiter.py  test_retriever.py  test_str_chunker.py  test_str_registry.py  test_vector_store.py
ui/: streamlit_app.py
